Fix some text contrast issues
(cherry picked from commit 50206710fc9d87b9586a29645524c4c019c79897)

--- a/share/ui/win32.css
+++ b/share/ui/win32.css
@@ -144,3 +144,13 @@ scrollbar.horizontal:hover button.down:active {
 #InkSpinScale spinbutton {
     margin-right: 5px;
 }
+
+/* Fix text contrast issues while hovering */
+
+treeview.view:selected {
+    color: #000;
+}
+
+treeview.view:selected:focus {
+    background-color: #a0d4fc;
+}
